--- a/ui/package.json
+++ b/ui/package.json
@@ -7,9 +7,10 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.8",
     "@mui/styled-engine-sc": "^5.10.6",
-    "@polkadot/api": "^8.9.1",
+    "@polkadot/api": "8.11.3",
+    "@polkadot/api-contract": "8.11.3",
+    "@polkadot/util-crypto": "^9.7.2",
     "@polkadot/extension-dapp": "^0.42.10",
-    "@polkadot/keyring": "^9.5.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
