--- a/ui/package.json
+++ b/ui/package.json
@@ -7,8 +7,8 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.8",
     "@mui/styled-engine-sc": "^5.10.6",
-    "@polkadot/api": "8.11.3",
-    "@polkadot/api-contract": "8.11.3",
+    "@polkadot/api": "^9.5.1",
+    "@polkadot/api-contract": "^9.5.1",
     "@polkadot/extension-dapp": "^0.42.10",
     "@polkadot/util-crypto": "^9.7.2",
     "@testing-library/jest-dom": "^5.14.1",
