--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "score-ui",
+  "name": "counter-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,6 @@
     "@mui/styled-engine-sc": "^5.10.6",
     "@polkadot/api": "^9.5.1",
     "@polkadot/api-contract": "^9.5.1",
-    "@polkadot/extension-dapp": "^0.42.10",
     "@polkadot/util-crypto": "^9.7.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
