--- a/ui/.env
+++ b/ui/.env
@@ -1,2 +1,2 @@
-REACT_APP_CONTRACT_ADDRESS=5DTefPTDUsnjW9xc7dee6AHbzn4Px8dHNooxrWW3tQ6UnArt
-
+REACT_APP_CONTRACT_ADDRESS=5Gp8BNeqtbnawXrjPqqQmdKqn76hTLvaxvbboYJ1aj1gesT4
+REACT_APP_WSS_PROVIDER=wss://uat-wss-nodes.5ire.network
