--- a/ui/.env
+++ b/ui/.env
@@ -1,2 +1,2 @@
-REACT_APP_CONTRACT_ADDRESS=5Gp8BNeqtbnawXrjPqqQmdKqn76hTLvaxvbboYJ1aj1gesT4
-REACT_APP_WSS_PROVIDER=wss://uat-wss-nodes.5ire.network
+REACT_APP_CONTRACT_ADDRESS=5HpdFhfS9GKwqVVfJ6L8574g7PxLjo7AYAcDrRzbCkf9fT94
+REACT_APP_WSS_PROVIDER=wss://wss-testnet.5ire.network/
