--- a/contracts/counter/Cargo.toml
+++ b/contracts/counter/Cargo.toml
@@ -1,35 +1,28 @@
 [package]
 name = "counter"
-version = "0.1.0"
-authors = ["[your_name] <[your_email]>"]
+version = "4.2.0"
+authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2021"
+publish = false
 
 [dependencies]
-ink_primitives = { version = "3", default-features = false }
-ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
-ink_env = { version = "3", default-features = false }
-ink_storage = { version = "3", default-features = false }
-ink_lang = { version = "3", default-features = false }
+ink = { version = "4.2", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }
+
+[dev-dependencies]
+ink_e2e = { version = "4.2" }
 
 [lib]
-name = "counter"
 path = "lib.rs"
-crate-type = [
-	# Used for normal contract Wasm blobs.
-	"cdylib",
-]
 
 [features]
 default = ["std"]
 std = [
-    "ink_metadata/std",
-    "ink_env/std",
-    "ink_storage/std",
-    "ink_primitives/std",
+    "ink/std",
     "scale/std",
     "scale-info/std",
 ]
 ink-as-dependency = []
+e2e-tests = []
