update new rpc testnet
Signed-off-by: dung5ire <dung@5ire.org>

--- a/contracts/scripts/deploy/.env.test
+++ b/contracts/scripts/deploy/.env.test
@@ -1,6 +1,4 @@
-# Beta testnet 
-#WSS_PROVIDER=wss://wss-testnet.5ire.network/
 # GA thunder testnet 
-WSS_PROVIDER=wss://wss.ga.5ire.network/
+WSS_PROVIDER=wss://rpc.testnet.5ire.network/
 MNEMONIC_PHRASE=xxx
 
